--- a/client/package.json
+++ b/client/package.json
@@ -25,11 +25,12 @@
   },
   "scripts": {
     "start":" react-scripts start",
+    "start-server":"cd .. && cd server && npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "eslintConfig": {
     "extends": [
       "react-app",
