--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   client:
-    container_name: "project-hb"
+    container_name: "project-client"
     build:
           context: "./client"
     ports:
